--- a/api/package.json
+++ b/api/package.json
@@ -12,7 +12,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.6.3",
-    "sequelize": "^6.34.0"
+    "sequelize": "^6.34.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
